@@ -1,3 +1,8 @@
+2004-10-05  Mikael Hallendal  <micke@imendio.com>
+
+	* src/*.[ch]:
+	- s/Imendio HB/Imendio AB/
+
 2004-09-30  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.in: Enable compilation against firefox' gtkmozembed library.
